<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAF3EC">

    <include
        android:id="@+id/navbar"
        layout="@layout/navbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" />

    <TableRow
        android:id="@+id/tableRow"
        android:layout_width="190dp"
        android:layout_height="72dp"
        android:layout_marginTop="160dp"
        android:soundEffectsEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/navbar">

        <TextView
            android:id="@+id/languageTextView"
            android:soundEffectsEnabled="false"
            android:layout_width="123dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:fontFamily="@font/baloo2_extra"
            android:gravity="center_vertical|start"
            android:text="@string/language"
            android:textColor="@color/font"
            android:textSize="30sp" />

        <ImageView
            android:id="@+id/flagImageView"
            android:soundEffectsEnabled="false"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_gravity="center_vertical|end"
            android:background="@drawable/flag_fi" />
    </TableRow>

    <TextView
        android:id="@+id/musicLabelSettings"
        android:soundEffectsEnabled="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/baloo2_extra"
        android:gravity="center"
        android:text="@string/music"
        android:textColor="@color/font"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/soundSettindsSlider" />

    <ImageView
        android:id="@+id/deleteUserButton"
        android:soundEffectsEnabled="false"
        android:layout_width="255dp"
        android:layout_height="83dp"
        android:layout_marginTop="52dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/musicSettindsSlider"
        app:srcCompat="@drawable/userdeletebutton" />

    <SeekBar
        android:id="@+id/soundSettindsSlider"
        android:soundEffectsEnabled="false"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:max="100"
        android:progress="100"
        android:progressDrawable="@drawable/custom_seekbar"
        android:thumb="@drawable/musicsliderellipse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/soundLabelSettings" />

    <TextView
        android:id="@+id/soundLabelSettings"
        android:soundEffectsEnabled="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/baloo2_extra"
        android:gravity="center"
        android:text="@string/sound"
        android:textColor="@color/font"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableRow" />

    <SeekBar
        android:id="@+id/musicSettindsSlider"
        android:soundEffectsEnabled="false"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:max="100"
        android:progress="100"
        android:progressDrawable="@drawable/custom_seekbar"
        android:thumb="@drawable/musicsliderellipse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/musicLabelSettings" />

    <ImageView
        android:id="@+id/homeIcon"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:soundEffectsEnabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.931"
        app:srcCompat="@drawable/homeicon" />

    <ImageView
        android:id="@+id/profileIcon"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:soundEffectsEnabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.931"
        app:srcCompat="@drawable/profileicon" />

    <ImageView
        android:id="@+id/settingsIcon"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:soundEffectsEnabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.901"
        app:srcCompat="@drawable/settingsicon" />

    <TextView
        android:id="@+id/deleteUserTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_user"
        android:fontFamily="@font/baloo2_extra"
        android:gravity="center"
        android:textColor="@color/font"
        android:soundEffectsEnabled="false"
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="@+id/deleteUserButton"
        app:layout_constraintEnd_toEndOf="@+id/deleteUserButton"
        app:layout_constraintStart_toStartOf="@+id/deleteUserButton"
        app:layout_constraintTop_toTopOf="@+id/deleteUserButton" />

</androidx.constraintlayout.widget.ConstraintLayout>