...
        android:soundEffectsEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/currentFlagInPopUp"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginTop="25dp"
        android:soundEffectsEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
        android:soundEffectsEnabled="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changeLanguageTextView"
        app:srcCompat="@drawable/flag_es" />

    <ImageView
        android:id="@+id/changeLanguageOption2"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="38dp"
        android:soundEffectsEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
...
